# DGtal-tutorial-jcgeo24

./: 404.html  CMakeLists.txt  Readme.md  estimators.html  examplePolyscope.cpp  homotopic-thinning.cpp  index.html  introduction.html  print.html  searchindex.js  searchindex.json  setup.html  thinning.html
book/: estimators.html  print.html  searchindex.js
cmake/: dgtal.cmake  polyscope.cmake
estimators/: estimations.html  operators.html  start.html
solutions/: surface-estimators.cpp  surface-operators.cpp
